fix(DIST-1112): Fix custom icon on mobile
fix(DIST-1112): Fix custom icon on mobile devices

--- a/packages/embed/src/css/popover.scss
+++ b/packages/embed/src/css/popover.scss
@@ -84,6 +84,7 @@
         width: 100%;
         height: 100%;
         object-fit: cover;
+        border-radius: 50%;
       }
     }
   }
@@ -202,12 +203,12 @@
 
         svg {
           margin-top: 4px;
-        }
-
-        svg,
-        img {
           max-height: 24px;
           max-width: 24px;
+        }
+        img {
+          max-width: 44px;
+          max-height: 44px;
         }
       }
     }
@@ -222,6 +223,10 @@
       &::before {
         bottom: 14px;
       }
+    }
+    &-unread-dot {
+      top: 0;
+      right: 0;
     }
   }
 
